FIX on context menu open screen does not jump anymore (#8)

--- a/src/app/components/dmnModeller/dmnModeller.scss
+++ b/src/app/components/dmnModeller/dmnModeller.scss
@@ -24,7 +24,7 @@
 .modeler-container {
     margin-top: 0.5rem;
     margin-left: 5px;
-    overflow-y: auto;
+    width: 100%;
 }
 
 :host::ng-deep {
